fix: legibility + anchors

--- a/assets/sass/_content_wrapper.scss
+++ b/assets/sass/_content_wrapper.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0% 10% 0% 10%;
+  padding: 0% 15%;
 }
 
 #content_wrapper blockquote p {
