--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -44,12 +44,16 @@ body {
 
 html {
   letter-spacing: .05em;
-  //line-height: 1.4;
+  line-height: 1.4;
+}
+
+table, th, td {
+  border: 1px solid;
 }
 
 @media only screen and (min-width: 850px) {
-  body { font-size: 1.15em }
-  html { line-height: 1.4 }
+  body { font-size: 1.25em }
+  html { line-height: 1.45 }
 }
 
 @media only screen and (max-width: 850px) {
